--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,7 @@ body {
      display: block;
      margin-left: auto;
      margin-right: auto;
-     height: 20px;
-     width: 300px;
+   
  }
  
  #add {
@@ -42,36 +41,7 @@ body {
      font-size: 25px;
      border: none;
      border-radius: 4px;
-     line-height: 40px;
      margin-bottom: 20px;
-     padding: 10px;
- }
- 
- :checked p {
-     text-decoration: line-through;
-     color: purple;
- }
- ul {
-     font-size: 20px;
-     
- }
- 
- 
- p li {
-     list-style-type: none;
-     margin-bottom: 20px;
-     margin-top: 40px;
- }
- 
- p {
-     text-align: center;
-     display: inline-block;
-     position: relative;
-     width: 100%;
-     font-size: 30px;
-     font-weight: bold;
-     font-family: Courier New, monospace;
-     margin-right: 20px;
  }
  
  button {
@@ -81,12 +51,9 @@ body {
      text-decoration: none;
      border:none;
      padding: 10px;
-     margin-left: 20px;
+     /* margin-left: 200px; */
  }
- 
- button:hover {
-     background-color: #EAB464;
- }
+
  
  input {
      width: 20px;
@@ -94,12 +61,36 @@ body {
      
  }
  
- #checked {
-     margin-left: 20px;
- }
+ #delete:hover {
+    background-color: #EAB464;
+}
 
- #delete {
-     margin-left: 15px;
- }
- 
- 
+#sort {
+    display: block;
+     margin-left: auto;
+     margin-right: auto;
+}
+
+#check, #delete {
+    /* display: inline-block; */
+    display: block;
+     margin-left: auto;
+     margin-right: auto;
+    
+     
+}
+
+#delete{
+ margin-top: 10px;
+}
+
+#sort:hover {
+    background-color: #EAB464;
+}
+
+:check p {
+    text-decoration: line-through;
+    color: purple;
+}
+
+
