--- a/src/Todo.css
+++ b/src/Todo.css
@@ -12,14 +12,11 @@ body {
      font-family: Courier New, monospace;
  
  }
- 
- #todo {
-     display: block;
-     margin-left: auto;
-     margin-right: auto;
-     height: 20px;
-     width: 300px;
+ .text {
+     margin-top: 100px;
  }
+
+
  
  #add {
      display: block;
@@ -38,42 +35,6 @@ body {
      background-color: #EAB464;
  }
  
- #todo {
-     font-size: 25px;
-     border: none;
-     border-radius: 4px;
-     line-height: 40px;
-     margin-bottom: 20px;
-     padding: 10px;
- }
- 
- :checked p {
-     text-decoration: line-through;
-     color: purple;
- }
- ul {
-     font-size: 20px;
-     
- }
- 
- 
- p li {
-     list-style-type: none;
-     margin-bottom: 20px;
-     margin-top: 40px;
- }
- 
- p {
-     text-align: center;
-     display: inline-block;
-     position: relative;
-     width: 100%;
-     font-size: 30px;
-     font-weight: bold;
-     font-family: Courier New, monospace;
-     margin-right: 20px;
- }
- 
  button {
      color: white;
      background-color: #231123;
@@ -84,18 +45,23 @@ body {
      margin-left: 20px;
  }
  
- button:hover {
+ /* button:hover {
      background-color: #EAB464;
- }
+ } */
  
  input {
      width: 20px;
-     height: 20px;
+     height: 40px;
      
  }
  
  #checked {
      margin-left: 20px;
+ }
+
+ #checked:checked p {
+    text-decoration: line-through;
+    color: white;
  }
  
  
